--- a/ProniaProject/ProniaProject/Areas/Admin/Views/Product/Update.cshtml
+++ b/ProniaProject/ProniaProject/Areas/Admin/Views/Product/Update.cshtml
@@ -1,16 +1,49 @@
 ﻿@model UpdateProductVM
-
+@{
+    ProductImage mainImg = Model.Images.FirstOrDefault(pi => pi.IsPrime == true);
+    ProductImage hoverImg = Model.Images.FirstOrDefault(pi => pi.IsPrime == false);
+    ProductImage addImg = Model.Images.FirstOrDefault(pi => pi.IsPrime == null);
+}
 <div class="row">
     <div class="col-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Create Product</h4>
+                <h4 class="card-title">Update Product</h4>
 
                 <form class="forms-sample" method="post" enctype="multipart/form-data">
                     <div class="form-group">
-                        <label asp-for="Price">Price</label>
-                        <input asp-for="Price" class="form-control" placeholder="Price">
-                        <span asp-validation-for="Price" class="text-danger"></span>
+                        <img style="height:70px;width:70px" src="~/assets/images/website-images/@mainImg?.Image" alt="Alternate Text" />
+                        <br />
+                        <label asp-for="MainPhoto">Main Photo</label>
+                        <input asp-for="MainPhoto" class="form-control" accept="image/*">
+                        <span asp-validation-for="MainPhoto" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <img style="height:70px;width:70px" src="~/assets/images/website-images/@hoverImg?.Image" alt="Alternate Text" />
+                        <br/>
+                        <label asp-for="HoverPhoto">Secondary Photo</label>
+                        <input asp-for="HoverPhoto" class="form-control" accept="image/*">
+                        <span asp-validation-for="HoverPhoto" class="text-danger"></span>
+                    </div>
+                    <div class="form-group d-flex ">
+                        
+                            @foreach(var item in Model.Images.Where(pi => pi.IsPrime == null).ToList())
+                            {
+                                <div class="position-relative">
+                                    <img style="height:70px;width:70px" src="~/assets/images/website-images/@addImg?.Image" alt="Alternate Text" />
+                                    <button type="button" class="text-danger cus-delete">X</button>
+                                    <input asp-for="ImageIds" type="hidden" class="form-control" accept="image/*">
+                                </div>
+                              
+                            }
+                       </div>
+
+
+                   
+                    <div class="form-group">
+                        <label asp-for="AdditionalPhotos">Additonal Photo</label>
+                        <input asp-for="AdditionalPhotos" multiple="multiple" class="form-control" accept="image/*">
+                        <span asp-validation-for="AdditionalPhotos" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Name">Name</label>
@@ -48,3 +81,15 @@
         </div>
     </div>
 </div>
+
+@section DeleteButtons{
+
+    <script>
+        var btns = document.querySelectorAll(".cus-delete");
+        for (let i = 0; i < btns.length; i++) {
+            btns[i].addEventListener("click", () => {
+                btns[i].parentElement.remove();
+            })
+        }
+    </script>
+}
