--- a/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
+++ b/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@using ProniaProject.Services.Interfaces
+@inject ILayoutService _layoutService;
+@{
+    Dictionary<string, string> settings = await _layoutService.GetSettingAsync();
+}
+
+<!DOCTYPE html>
 <html lang="zxx">
   <head>
     <meta charset="UTF-8" />
@@ -113,11 +119,11 @@
                 <div class="header-middle-wrap position-relative">
                   <div class="header-contact d-none d-lg-flex">
                     <i class="pe-7s-call"></i>
-                    <a href="tel://+00-123-456-789">+00 123 456 789</a>
+                    <a href="tel://@settings["PhoneNumber"]">@settings["PhoneNumber"]</a>
                   </div>
 
                   <a href="index.html" class="header-logo">
-                    <img src="assets/images/logo/dark.png" alt="Header Logo" />
+                    <img src="assets/images/logo/@settings["Logo"]" alt="Header Logo" />
                   </a>
 
                   <div class="header-right">
@@ -129,7 +135,7 @@
                           data-bs-toggle="modal"
                           data-bs-target="#exampleModal"
                         >
-                          <i class="pe-7s-search"></i>
+                          @Html.Raw(settings["SearchIcon"])
                         </a>
                       </li>
                       <li class="dropdown d-none d-lg-block">
@@ -351,7 +357,7 @@
               <div class="row align-items-center">
                 <div class="col-lg-3 col-6">
                   <a href="index.html" class="header-logo">
-                    <img src="assets/images/logo/dark.png" alt="Header Logo" />
+                    <img src="assets/images/logo/@settings["Logo"]" alt="Header Logo" />
                   </a>
                 </div>
                 <div class="col-lg-6 d-none d-lg-block">
@@ -509,7 +515,7 @@
                           data-bs-toggle="modal"
                           data-bs-target="#exampleModal"
                         >
-                          <i class="pe-7s-search"></i>
+                          @Html.Raw(settings["SearchIcon"])
                         </a>
                       </li>
                       <li class="dropdown d-none d-lg-block">
@@ -573,7 +579,7 @@
               </div>
               <div class="header-contact offcanvas-contact">
                 <i class="pe-7s-call"></i>
-                <a href="tel://+00-123-456-789">+00 123 456 789</a>
+                <a href="tel://@settings["PhoneNumber"]">@settings["PhoneNumber"]</a>
               </div>
               <div class="offcanvas-user-info">
                 <ul class="dropdown-wrap">
@@ -924,7 +930,8 @@
                       type="submit"
                       aria-label="searchbtn"
                     >
-                      <i class="pe-7s-search"></i>
+                      
+                    @Html.Raw(settings["SearchIcon"])
                     </button>
                   </form>
                 </div>
@@ -1071,7 +1078,7 @@
                             <div class="footer-widget-item">
                                 <div class="footer-widget-logo">
                                     <a href="index.html">
-                                        <img src="assets/images/logo/dark.png" alt="Logo" />
+                                        <img src="assets/images/logo/@settings["Logo"]" alt="Logo" />
                                     </a>
                                 </div>
                                 <p class="footer-widget-desc">
@@ -1199,10 +1206,10 @@
                         <div class="col-lg-3 pt-40">
                             <div class="footer-contact-info">
                                 <h3 class="footer-widget-title">Got Question? Call Us</h3>
-                                <a class="number" href="tel://123-456-789">123 456 789</a>
+                                <a class="number" href="tel://@settings["PhoneNumber"]">@settings["PhoneNumber"]</a>
                                 <div class="address">
                                     <ul>
-                                        <li>Your Address Goes Here</li>
+                                        <li>@settings["Adress"]</li>
                                     </ul>
                                 </div>
                             </div>
