--- a/ProniaProject/ProniaProject/Views/Basket/Index.cshtml
+++ b/ProniaProject/ProniaProject/Views/Basket/Index.cshtml
@@ -73,7 +73,7 @@
                                                            type="text" />
                                                     <div class="dec qtybutton">
                                                         <form asp-action="DecraseItemQuantity" asp-route-id="@item.Id" method="post">
-                                                            <button>
+                                                            <button style="opacity:0;z-index:6;height:20px;width:20px;">
                                                                 <i class="fa fa-minus">
 
                                                                 </i>
@@ -82,7 +82,7 @@
                                                     </div>
                                                     <div class="inc qtybutton">
                                                         <form asp-action="IncreaseItemQuantity" asp-route-id="@item.Id" method="post">
-                                                      <button>
+                                                            <button style=" opacity:0;z-index:6; height:20px;width:20px;">
                                                             <i class="fa fa-plus">
 
                                                             </i>
@@ -142,3 +142,4 @@
         </div>
     </div>
 </main>
+
