--- a/ProniaProject/ProniaProject/Views/Home/Index.cshtml
+++ b/ProniaProject/ProniaProject/Views/Home/Index.cshtml
@@ -507,4 +507,28 @@
         </div>
     </div>
 </div>
+
+
+<script>
+        let addBtns = document.querySelectorAll(".cus-add-basket");
+        addBtns.forEach(b => b.addEventListener("click", function (e) {
+            e.preventDefault();
+            let endPoint = this.getAttribute("href");
+
+            $.ajax({
+                type: "GET",
+                url: endPoint,
+                success: function (response) {
+                    alert("Mehsul elave olundu");
+                    console.log(response);
+                }
+            }).done(data => {
+                let cart = document.querySelector("#miniCart");
+                cart.innerHTML = data;
+            });
+        }));
+   
+
+
+</script>
 <!-- Blog Area End Here -->
