--- a/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
+++ b/ProniaProject/ProniaProject/Views/Shared/_Layout.cshtml
@@ -1,8 +1,9 @@
 ﻿@using ProniaProject.Services.Interfaces
 @inject ILayoutService _layoutService;
+@inject IBasketService _basketService;
 @{
     Dictionary<string, string> settings = await _layoutService.GetSettingAsync();
-    List<BasketItemVM> basketItems = await _layoutService.GetBasketAsync();
+    List<BasketItemVM> basketItems = await _basketService.GetBasketAsync();
     decimal total = 0;
 }
 
@@ -942,72 +943,7 @@
           </div>
         </div>
         <div class="offcanvas-minicart_wrapper" id="miniCart">
-          <div class="offcanvas-body">
-            <div class="minicart-content">
-              <div class="minicart-heading">
-                <h4 class="mb-0">Shopping Cart</h4>
-                <a href="#" class="button-close"
-                  ><i
-                    class="pe-7s-close"
-                    data-tippy="Close"
-                    data-tippy-inertia="true"
-                    data-tippy-animation="shift-away"
-                    data-tippy-delay="50"
-                    data-tippy-arrow="true"
-                    data-tippy-theme="sharpborder"
-                  ></i
-                ></a>
-              </div>
-              <ul class="minicart-list">
-                            @foreach(BasketItemVM item in basketItems)
-                            {
-                                total += item.SubTotal;
-                                <li class="minicart-product">
-                                    <a asp-action="RemoveItemFromBasket" asp-route-id="@item.Id" class="product-item_remove">
-                                        <i class="pe-7s-close"
-                                           data-tippy="Remove"
-                                           data-tippy-inertia="true"
-                                           data-tippy-animation="shift-away"
-                                           data-tippy-delay="50"
-                                           data-tippy-arrow="true"
-                                           data-tippy-theme="sharpborder"></i>
-                                    </a>
-                                    <a href="single-product-variable.html"
-                                       class="product-item_img">
-                                        <img class="img-full"
-                                             src="~/assets/images/website-images/@item.Image"
-                                             alt="Product Image" />
-                                    </a>
-                                    <div class="product-item_content">
-                                        <a class="product-item_title"
-                                           href="single-product-variable.html">@item.Name</a>
-                                        <span class="product-item_quantity">@item.Count x @item.Price</span>
-                                    </div>
-                                </li>
-                            }
-
-              </ul>
-                    </div>
-                        @if (basketItems.Count != 0)
-                        {
-                            <div class="minicart-item_total">
-                                <span>Subtotal</span>
-                                <span class="ammount">$@total</span>
-                            </div>
-                            <div class="group-btn_wrap d-grid gap-2">
-                                <a asp-action="index" asp-controller="basket" class="btn btn-dark">View Cart</a>
-                                <a href="checkout.html" class="btn btn-dark">Checkout</a>
-                            </div>
-                        }
-                        else
-                        {
-                            <div class="minicart-item_total">
-                                <span>Your Cart is empty <a asp-action="index" asp-controller="home">Shop Now</a> </span>
-                                
-                            </div>
-                        }
-        
-          </div>
+         @Html.Partial("BasketPartialView",basketItems);
            </div>
 
         <div class="global-overlay"></div>
